Adding sms sending feature

--- a/backend/todo/pom.xml
+++ b/backend/todo/pom.xml
@@ -69,6 +69,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>8.19.1</version>
+		</dependency>
  </dependencies>
 
 	<build>
