Added email service

--- a/backend/todo/src/main/resources/application.properties
+++ b/backend/todo/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=c1gp.email.service@gmail.com
+spring.mail.password=Cs203group!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
