--- a/backend/todo/pom.xml
+++ b/backend/todo/pom.xml
@@ -83,6 +83,11 @@
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.8</version>
+		</dependency>
  </dependencies>
 
 	<build>
