--- a/frontend/todo-app/package.json
+++ b/frontend/todo-app/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.3",
     "bootstrap": "^5.1.0",
     "formik": "^2.2.9",
+    "loglevel-plugin-remote": "^0.6.8",
     "moment": "^2.29.1",
     "p5": "^1.4.0",
     "react": "^17.0.2",
