--- a/backend/todo/pom.xml
+++ b/backend/todo/pom.xml
@@ -88,6 +88,16 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.8</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
  </dependencies>
 
 	<build>
