--- a/frontend/todo-app/package.json
+++ b/frontend/todo-app/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.2.9",
     "loglevel-plugin-remote": "^0.6.8",
     "moment": "^2.29.1",
+    "multiselect-react-dropdown": "^2.0.7",
     "p5": "^1.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
