--- a/frontend/todo-app/package.json
+++ b/frontend/todo-app/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
+    "shards-react": "^1.0.3",
     "three": "^0.132.2",
     "vanta": "^0.5.21",
     "web-vitals": "^1.1.2"
