--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,4 +19,4 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file /backend/todo/pom.xml
+      run: mvn -B package --file backend/todo/pom.xml
