--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,7 +8,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -20,3 +20,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file backend/todo/pom.xml
+    - name: Run Tests
+      run: mvn -B test --file backend/todo/pom.xml
