--- a/backend/todo/pom.xml
+++ b/backend/todo/pom.xml
@@ -16,6 +16,10 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	<properties>
+  <sonar.organization>luppieliz</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 	<dependencies>
 <!--		<dependency>-->
 <!--			<groupId>io.jsonwebtoken</groupId>-->
