--- a/backend/todo/pom.xml
+++ b/backend/todo/pom.xml
@@ -15,6 +15,10 @@
 	<description>Todo Application from in28Minutes Udemy</description>
 	<properties>
 		<java.version>11</java.version>
+		<properties>
+			<sonar.organization>luppieliz</sonar.organization>
+			<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		</properties>
 	</properties>
 	<dependencies>
 <!--		<dependency>-->
@@ -105,6 +109,26 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.7</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<!-- attached to Maven test phase -->
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
