--- a/backend/todo/.gitignore
+++ b/backend/todo/.gitignore
@@ -32,5 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-### Resources
-src/main/resources/
+### Scraper Config ###
+src/main/java/com/app/todo/scraper/ScraperConfig.java
