--- a/backend/todo/pom.xml
+++ b/backend/todo/pom.xml
@@ -100,6 +100,12 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>3.1.2</version>
+			<scope>test</scope>
+		</dependency>
  </dependencies>
 
 	<build>
