Implemented hourly news refresh

--- a/backend/todo/src/main/resources/application.properties
+++ b/backend/todo/src/main/resources/application.properties
@@ -31,6 +31,11 @@ twilio.authToken = 5a70499c931dfb46565d15c9e627b4da
 twilio.phoneNumber =+13235534957
 
 #every hour
-scheduled.newsRefreshCron = 0 0 * * * * 
+scheduled.newsRefreshCron = 0 0 * * * *
+#scheduled.newsRefreshCron = 0/10 * * * * *
 #every day
 scheduled.FAQRefreshCron = 0 0 0 * * *
+
+#queries for auto-retrieve news
+scheduled.news.sources = channelnewsasia.com,straitstimes.com
+scheduled.news.query = covid+singapore
