--- a/backend/todo/src/main/resources/application.properties
+++ b/backend/todo/src/main/resources/application.properties
@@ -10,6 +10,12 @@ logging.level.org.springframework=info
 #jwt.http.request.header=Authorization
 #jwt.token.expiration.in.seconds=604800
 
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://kuehbies.com
+#spring.datasource.username=ufgw1fmiici7q
+#spring.datasource.password=gfakrypjbcek
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.defer-datasource-initialization=true
