--- a/backend/todo/src/main/resources/application.properties
+++ b/backend/todo/src/main/resources/application.properties
@@ -4,11 +4,11 @@ logging.level.org.springframework=info
 #spring.security.user.name=username
 #spring.security.user.password=password
 
-#jwt.signing.key.secret=mySecret
-#jwt.get.token.uri=/authenticate
-#jwt.refresh.token.uri=/refresh
-#jwt.http.request.header=Authorization
-#jwt.token.expiration.in.seconds=604800
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://kuehbies.com
