--- a/backend/todo/src/main/resources/application.properties
+++ b/backend/todo/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.h2.console.enabled=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=c1gp.email.service@gmail.com
-spring.mail.password=Cs203group!
+spring.mail.username=cs203g3t1@gmail.com
+spring.mail.password=kdfdpivevdllmbbi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
