Optimized backend imports and reformatted code

--- a/backend/todo/src/main/resources/application.properties
+++ b/backend/todo/src/main/resources/application.properties
@@ -1,47 +1,30 @@
 logging.level.org.springframework=info
-
-#old basicauth
-#spring.security.user.name=username
-#spring.security.user.password=password
-
+#jwt
 jwt.signing.key.secret=mySecret
 jwt.get.token.uri=/authenticate
 jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=604800
-
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://kuehbies.com
-#spring.datasource.username=ufgw1fmiici7q
-#spring.datasource.password=gfakrypjbcek
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+#jpa
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.defer-datasource-initialization=true
-
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-
+#java mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=cs203g3t1@gmail.com
 spring.mail.password=kdfdpivevdllmbbi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-newsAPI.API_KEY = df40cdec224c4e9b8b6c98240f0cabb3
-
-twilio.accountSID = AC5284a3699423deebf5c5a38b12658777
-twilio.authToken = e99aa00d4743c9f675682ac4310b6eb0
-twilio.phoneNumber =+13235534957
-
-#every hour
-scheduled.newsRefreshCron = 0 0 * * * *
-#scheduled.newsRefreshCron = 0/10 * * * * *
-#every day
-scheduled.FAQRefreshCron = 0 0 0 * * *
-
-#queries for auto-retrieve news
-scheduled.news.sources = channelnewsasia.com,straitstimes.com
-scheduled.news.query = covid+singapore
+#news
+newsAPI.API_KEY=df40cdec224c4e9b8b6c98240f0cabb3
+scheduled.newsRefreshCron=0 0 * * * *
+scheduled.FAQRefreshCron=0 0 0 * * *
+scheduled.news.sources=channelnewsasia.com,straitstimes.com
+scheduled.news.query=covid+singapore
+#twilio
+twilio.accountSID=AC5284a3699423deebf5c5a38b12658777
+twilio.authToken=e99aa00d4743c9f675682ac4310b6eb0
+twilio.phoneNumber=+13235534957
