Removed unused package security config, fixed magic string

--- a/backend/todo/src/main/resources/application.properties
+++ b/backend/todo/src/main/resources/application.properties
@@ -18,7 +18,9 @@ spring.mail.username=cs203g3t1@gmail.com
 spring.mail.password=kdfdpivevdllmbbi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-#news
+#news and faq
+api.url.faq=https://www.enterprisesg.gov.sg/covid-19/safe-distance
+api.url.newsapi=https://newsapi.org/v2
 newsAPI.API_KEY=df40cdec224c4e9b8b6c98240f0cabb3
 scheduled.newsRefreshCron=0 0 * * * *
 scheduled.FAQRefreshCron=0 0 0 * * *
